# my-music-library-private-share-site

./: .env.sample  .gitignore  CLAUDE.md  DEPLOY.md  PLAN.md  README.md  claude-code-development-plan.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.claude/skills/ui-ux-pro-max/: SKILL.md
.playwright-cli/: page-2026-03-09T15-20-31-173Z.yml  page-2026-03-09T15-21-47-372Z.yml  page-2026-03-09T15-21-57-665Z.yml  page-2026-03-09T15-22-15-469Z.yml
functions/: auth.py  cf-auth-check.js
infra/: app.py  cdk.json
infra/stacks/: music_site_stack.py
scripts/: generate_artwork.py  generate_catalog.py  upload_to_s3.py
src/: App.tsx  index.css
src/components/: DownloadButton.tsx  FavoriteButton.tsx  MobileNav.tsx  NowPlaying.tsx  PasswordGate.tsx  Player.tsx  PlayerControls.tsx  ProgressBar.tsx  RecommendedPlaylists.tsx  Sidebar.tsx  TrackList.tsx
src/data/: catalog.json
src/hooks/: useAudioPlayer.ts  useAuth.ts  useFavorites.ts  usePlaylist.ts
src/types/: music.ts
src/utils/: naming.ts
