[project]
name = "music-site-scripts"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mutagen>=1.47",
    "boto3>=1.35",
    "google-genai>=1.0",
    "pillow>=11.0",
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0",
    "python-dotenv>=1.2.2",
    "pydub>=0.25",
    "audioop-lts>=0.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
